# rust-raytracer

./: .gitignore  Cargo.toml  README.md
src/: arena_tree.rs  bounds.rs  camera.rs  canvas.rs  cli.rs  color.rs  computations.rs  cone.rs  cube.rs  cylinder.rs  group.rs  intersection.rs  lib.rs  lights.rs  main.rs  materials.rs  math.rs  matrix.rs  obj_file.rs  object.rs  plane.rs  ppm.rs  ray.rs  shape.rs  sphere.rs  transformation.rs  tuple.rs  world.rs
src/bin-off/: chapter12.rs  chapter14.rs  chapter2.rs  chapter7.rs  chapter9.rs
src/chapters/: appendix1.rs  chapter1.rs  chapter11.rs  chapter12.rs  chapter14-bb.rs  chapter14-bvh.rs  chapter14-hex.rs  chapter14.rs  chapter15.rs  chapter16.rs  chapter2.rs  chapter3.rs  chapter5.rs  chapter7.rs  chapter8.rs  chapter9.rs  dragons.rs  mod.rs  patterns.rs
src/pattern/: checkers.rs  gradient.rs  mod.rs  ring.rs  stripe.rs  texture_map.rs
src/shapes/: cone.rs  csg.rs  cube.rs  cylinder.rs  group-mine.rs  group.rs  mod.rs  plane.rs  shape.rs  smooth_triangle.rs  sphere.rs  triangle.rs
