[package]
name = "rust_raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.17.0"
rand = "0.8"
tobj = "3.2.3"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.6"

[[bin]]
name = "raytracer_bin"
path = "src/bin/main.rs"

[lib]
name = "raytracer"
path = "src/lib.rs"
